--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: biospark
+name: bioR
 
 # Short bio or description (displayed in the header)
-description: bio + Python + Spark !
+description: 질병유전체 분석 + R
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/biospin/biospark/gh-pages/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/biospin/bioR/gh-pages/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook: groups/biospin/
   flickr:
-  github: biospin/biospark
+  github: biospin/bioR
   instagram:
   linkedin:
   pinterest:
